# PyroBot

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  app.json  pyproject.toml  requirements.txt  sample.env
.github/: dependabot.yml
pyrobot/: __init__.py  __main__.py  bot_class.py  vars.py
pyrobot/plugins/: __init__.py  start.py
