[tool.poetry]
name = "PyroBot"
version = "1.0.0"
description = "A template which I use to make my telegram bots!"
authors = ["Divkix <techdroidroot@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
Pyrogram = "^2.0.60"
TgCrypto = "^1.2.5"
prettyconf = "^2.2.1"

[tool.poetry.dev-dependencies]
pylint = "^2.13.9"
pre-commit = "^2.20.0"
pyclean = "^2.2.0"
isort = "^5.10.1"
black = "^22.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
